apps/rollout-demo/rollout.yaml
# Blue-Green Rollout Demo
# Change the image tag (blue/green/yellow/red/purple/orange) to trigger a rollout
# The new version will appear on the preview URL for testing before promotion
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollout-demo
  template:
    metadata:
      labels:
        app: rollout-demo
    spec:
      containers:
        - name: rollout-demo
          # Available tags: blue, green, yellow, red, purple, orange
          # Change this to trigger a blue-green deployment
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 50m
  strategy:
    blueGreen:
      # Service that receives production traffic
      activeService: rollout-demo-active
      # Service for testing new versions before promotion
      previewService: rollout-demo-preview
      # Require manual promotion (set to true for auto-promotion)
      autoPromotionEnabled: false
